CTT_Package/objects/ACN_Question_Repository__c.object
<CustomObject>
    <fields>
        <fullName>ACN_Compound_Screen__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compound Screen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Options__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Question_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACN_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Compound-Screen</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Multi-select</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Textarea</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question Repository</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ACN_Question_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACN_Compound_Screen_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				 ISPICKVAL(ACN_Type__c,&quot;Compound Screen&quot;), 
					ISBLANK(ACN_Compound_Screen__c)
)</errorConditionFormula>
        <errorDisplayField>ACN_Compound_Screen__c</errorDisplayField>
        <errorMessage>Compound screen cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACN_Option_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(ISPICKVAL( ACN_Type__c , &quot;Radio&quot;),ISPICKVAL( ACN_Type__c , &quot;Checkbox&quot;),
							ISPICKVAL( ACN_Type__c , &quot;Picklist&quot;),ISPICKVAL( ACN_Type__c , &quot;Multi-select&quot;)
						), 
     ISBLANK(ACN_Options__c) 
)</errorConditionFormula>
        <errorDisplayField>ACN_Options__c</errorDisplayField>
        <errorMessage>Options Cannot be left blank.</errorMessage>
    </validationRules>
</CustomObject>